test/error/unterminated_cond.true
File 0, line 1, col 0 - 3:
unterminated conditional "#if"

